# altv-go-module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  go.mod
.github/workflows/: build-deploy.yml  test-changes.yml
go-pkg/: go.mod
go-pkg/alt/: test.go
go-pkg/altv/: go.mod  resource.go
runtime/src/: GoEventFactory.cpp  GoEventFactory.h  GoEventManager.cpp  GoEventManager.h  GoEventState.cpp  GoEventState.h  GoExportManager.cpp  GoExportManager.h  GoResource.cpp  GoResource.h  GoRuntime.cpp  GoRuntime.h  Library.h  Main.h
runtime/src/capi/: BaseObject.cpp  BaseObject.h  Checkpoint.cpp  Checkpoint.h  ColShape.cpp  ColShape.h  Core.cpp  Core.h  Player.cpp  Player.h  Runtime.cpp  Runtime.h  Vehicle.cpp  Vehicle.h  VoiceChannel.cpp  VoiceChannel.h
runtime/src/events/: ClientScriptEvent.cpp  ColShapeEvent.cpp  ColShapeEvent.h  ConsoleCommandEvent.cpp  ExplosionEvent.cpp  ExplosionEvent.h  FireEvent.cpp  GlobalMetaDataChangeEvent.cpp  GlobalSyncedMetaDataChangeEvent.cpp  NetOwnerChangeEvent.cpp  NetOwnerChangeEvent.h  PlayerChangeVehicleSeatEvent.cpp  PlayerConnectEvent.cpp  PlayerConnectEvent.h  PlayerDamageEvent.cpp  PlayerDamageEvent.h  PlayerDeathEvent.cpp  PlayerDeathEvent.h  PlayerDisconnectEvent.cpp  PlayerEnterVehicleEvent.cpp  PlayerEnteringVehicleEvent.cpp  PlayerLeaveVehicleEvent.cpp  PlayerWeaponChangeEvent.cpp  ResourceErrorEvent.cpp  ResourceStartEvent.cpp  ResourceStopEvent.cpp  ServerScriptEvent.cpp  StartProjectileEvent.cpp  StreamSyncedMetaDataChangeEvent.cpp  StreamSyncedMetaDataChangeEvent.h  SyncedMetaDataChangeEvent.cpp  SyncedMetaDataChangeEvent.h  VehicleDamageEvent.cpp  VehicleDamageEvent.h  WeaponDamageEvent.cpp  WeaponDamageEvent.h
src/: GoExportManager.cpp  GoResource.cpp  GoResource.h  GoRuntime.cpp  GoRuntime.h  Main.cpp  Main.h  mvalue.proto
src/capi/: Blip.cpp  Blip.h  Checkpoint.cpp  Checkpoint.h  ColShape.cpp  ColShape.h  Core.cpp  Core.h  Player.cpp  Player.h  Runtime.cpp  Runtime.h  Vehicle.cpp  Vehicle.h  VoiceChannel.cpp  VoiceChannel.h
src/events/: ClientScriptEvent.cpp  ConnectionQueueAddEvent.cpp  ConnectionQueueRemoveEvent.cpp  ConsoleCommandEvent.cpp  GlobalMetaDataChangeEvent.cpp  GlobalSyncedMetaDataChangeEvent.cpp  LocalSyncedMetaDataChangeEvent.cpp  MetaDataChangeEvent.cpp  PlayerBeforeConnectEvent.cpp  PlayerBeforeConnectEvent.h  ServerScriptEvent.cpp  StreamSyncedMetaDataChangeEvent.cpp  SyncedMetaDataChangeEvent.cpp  WeaponDamageEvent.cpp
test-resource/: main.go
tools/: gen-body-from-def.js  go-pkg-gen-typedef.js  pkg-capi.js  test.cpp
vendors/protobuf/lib/: libprotobuf-lite.lib  libprotobuf.lib  libprotoc.lib
vendors/protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
vendors/protobuf/win/cmake/: protobuf-config-version.cmake  protobuf-targets.cmake
